# programming-memo

algo/basic_algo/: quick_sort.c
algo/leetcode/: q25.py  q787.py
assembly/minimal_hello_world/: Makefile  hello_aarch_linux.S  hello_aarch_mac.s
c/basic-syntax-examples/: Makefile
c/io-model/: blocked_tcp_server.c
c/memory/: example  example.txt  main.c
cpp/async/: generate.py  sync_example.cc
cpp/avx/: avx2_benchmark.cpp  cpu_benchmark.cpp
cpp/cmake-demo/: CMakeLists.txt  main.c
cpp/cpp-11-feature/: atomic.cpp
cpp/learning-avx/: avx2_benchmark  cpu_benchmark.cpp
cpp/learning-c/: miniboot.elf
cpp/learning-cpp-11/: atomic.cpp
cpp/makefile-demo/: Makefile  main.cpp
cpp/shared-memory/: Makefile  reader.cc  writer.cc
cuda/basic/: Makefile  demo.cu  matmul.cpp  matmul.cu
cuda/cuda-basic/: README.md  test_async_engine
cuda/nccl/: Makefile  multi_device_per_thread.cu  test_nccl.cu
cuda/nccl-demos/: Makefile  multi_device_per_thread.cu  test_nccl.cu
learning-cpp/learning-avx/: avx2_benchmark.cpp  cpu_benchmark
learning-cpp/learning-build/: factorial.cpp  functions.h  printhello.cpp
learning-cpp/learning-c/: miniboot.c
learning-cpp/learning-linker/: main.c
learning-cuda/cuda-basic/: test_async_engine.cu
learning-cuda/hello_world/: a.exp  hello_cuda.cu
learning-python/web/: chatbot_fastapi_demo.py
python/async/: compare_thread_coroutine.py
python/basic-feature/: test_pdb.py
python/basic_usage/: test_dunder.ipynb
python/binding/: spammodule.c
python/crawler/: douban-books.json  movie_comments.json  test_drission_page.py  (+2 more)
(+20 files in other folders)
